Cambios en la pantalla de inicio de sesion

--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/IniciarSesion.cshtml
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/IniciarSesion.cshtml
@@ -24,22 +24,22 @@
                                     <div class="form-group">
                                         <input type="email" class="form-control form-control-user"
                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                               placeholder="Enter Email Address...">
+                                               placeholder="Identificacion">
                                     </div>
                                     <div class="form-group">
                                         <input type="password" class="form-control form-control-user"
-                                               id="exampleInputPassword" placeholder="Password">
+                                               id="exampleInputPassword" placeholder="Contrasena">
                                     </div>
                                     <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                        Login
+                                        Iniciar Sesion
                                     </a>
                                 </form>
                                 <hr>
                                 <div class="text-center">
-                                    <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                    <a class="small" href="forgot-password.html">Recuperar Acceso</a>
                                 </div>
                                 <div class="text-center">
-                                    <a class="small" href="register.html">Create an Account!</a>
+                                    <a class="small" href="register.html">Crear cuenta</a>
                                 </div>
                             </div>
                         </div>
