--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/RecuperarAcceso.cshtml
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/RecuperarAcceso.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ProyectoWeb_Martes.Entidades.Usuario
 
 @{
-    ViewBag.Title = "IniciarSesion";
+    ViewBag.Title = "RecuperarAcceso";
     Layout = "~/Views/Shared/_LayoutExterno.cshtml";
 }
 
 <div class="container">
 
-    <!-- Outer Row --> 
+    <!-- Outer Row -->
     <div class="row justify-content-center" style="margin-top:5%">
 
         <div class="col-xl-10 col-lg-12 col-md-9">
@@ -20,22 +20,23 @@
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h3 class="h4 text-gray-900 mb-4">Iniciar Sesión</h3>
+                                    <h3 class="h4 text-gray-900 mb-4">Recuperar Acceso</h3>
                                 </div>
-                                @using (Html.BeginForm("IniciarSesion", "Inicio"))
+
+                                @using (Html.BeginForm("RecuperarAcceso", "Inicio"))
                                 {
                                     <div class="form-group">
-                                        @Html.TextBoxFor(m => m.Identificacion, new { @class="form-control form-control-user", @placeholder = "Identificacion" })
-                                    </div>
-                                    <div class="form-group">
-                                        @Html.PasswordFor(m => m.Clave, new { @class = "form-control form-control-user", @placeholder = "Contraseña" })
+                                        <div class="form-group">
+                                            @Html.TextBoxFor(m => m.Identificacion, new { @class = "form-control form-control-user", @placeholder = "Identificacion" })
+                                        </div>
                                     </div>
 
-                                    <input type="submit" class="btn btn-primary btn-user btn-block" value="Procesar" />
+                                    <input type="submit" class="btn btn-primary btn-user btn-block" value="Procesar">
                                 }
+
                                 <hr>
                                 <div class="text-center">
-                                    <a class="small" href="@Url.Action("RecuperarAcceso", "Inicio")">Recuperar acceso</a>
+                                    <a class="small" href="@Url.Action("IniciarSesion", "Inicio")">Iniciar Sesion</a>
                                 </div>
                                 <div class="text-center">
                                     <a class="small" href="@Url.Action("RegistrarUsuario", "Inicio")">Crear cuenta</a>
