--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/RegistrarUsuario.cshtml
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/RegistrarUsuario.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model ProyectoWeb_Martes.Entidades.Usuario
+
 @{
     ViewBag.Title = "RegistrarUsuario";
     Layout = "~/Views/Shared/_LayoutExterno.cshtml";
@@ -19,53 +20,42 @@
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                    <h3 class="h4 text-gray-900 mb-4">Registrar Usuario</h3>
                                 </div>
-                                <form class="user">
-
+                                @using (Html.BeginForm("RegistrarUsuario", "Inicio"))
+                                {
                                     <div class="form-group">
-                                        <input type="email" class="form-control form-control-user"
-                                               id="exampleInputEmail" aria-describedby="emailHelp"
-                                               placeholder="Enter Email Address...">
+                                        @Html.TextBoxFor(m => m.Identificacion, new { @class = "form-control form-control-user", @placeholder = "Identificacion", @onkeyup = "ConsultarNombre()" })
                                     </div>
 
                                     <div class="form-group">
-                                        <input type="email" class="form-control form-control-user"
-                                               id="exampleInputEmail" aria-describedby="emailHelp"
-                                               placeholder="Enter Email Address...">
+                                        @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control form-control-user", @placeholder = "Nombre", @readonly = true })
                                     </div>
 
                                     <div class="form-group">
-                                        <input type="email" class="form-control form-control-user"
-                                               id="exampleInputEmail" aria-describedby="emailHelp"
-                                               placeholder="Enter Email Address...">
+                                        @Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control form-control-user", @placeholder = "Correo", @type="Email" })
                                     </div>
 
                                     <div class="form-group">
-                                        <input type="password" class="form-control form-control-user"
-                                               id="exampleInputPassword" placeholder="Password">
+                                        @Html.PasswordFor(m => m.Clave, new { @class = "form-control form-control-user", @placeholder = "Contraseña" })
                                     </div>
 
-                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                        Login
-                                    </a>
-                                </form>
+                                    <input type="submit" class="btn btn-primary btn-user btn-block" value="Procesar">
+                                }
                                 <hr>
                                 <div class="text-center">
-                                    <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                    <a class="small" href="@Url.Action("RecuperarAcceso", "Inicio")">Recuperar Acceso</a>
                                 </div>
                                 <div class="text-center">
-                                    <a class="small" href="register.html">Create an Account!</a>
+                                    <a class="small" href="@Url.Action("IniciarSesion", "Inicio")">Iniciar Sesion</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
     </div>
-
 </div>
 
+<script src="~/Estilos/js/RegistroUsuarios.js"></script>
