--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/RegistrarUsuario.cshtml
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/RegistrarUsuario.cshtml
@@ -22,22 +22,29 @@
                                 <div class="text-center">
                                     <h3 class="h4 text-gray-900 mb-4">Registrar Usuario</h3>
                                 </div>
+                                @if (ViewBag.MsjPantalla != null)
+                                {
+                                    <div class="alert alert-warning" role="alert" style="text-align:center">
+                                        @ViewBag.MsjPantalla
+                                    </div>
+                                }
+
                                 @using (Html.BeginForm("RegistrarUsuario", "Inicio"))
                                 {
                                     <div class="form-group">
-                                        @Html.TextBoxFor(m => m.Identificacion, new { @class = "form-control form-control-user", @placeholder = "Identificacion", @onkeyup = "ConsultarNombre()" })
+                                        @Html.TextBoxFor(m => m.Identificacion, new { @class = "form-control form-control-user", @placeholder = "Identificacion", @onkeyup = "ConsultarNombre()", @required = "true" })
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control form-control-user", @placeholder = "Nombre", @readonly = true })
+                                        @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control form-control-user", @placeholder = "Nombre", @readonly = true, @required = "true" })
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control form-control-user", @placeholder = "Correo", @type="Email" })
+                                        @Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control form-control-user", @placeholder = "Correo", @type = "Email", @required = "true" })
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.PasswordFor(m => m.Clave, new { @class = "form-control form-control-user", @placeholder = "Contraseña" })
+                                        @Html.PasswordFor(m => m.Clave, new { @class = "form-control form-control-user", @placeholder = "Contraseña", @required = "true" })
                                     </div>
 
                                     <input type="submit" class="btn btn-primary btn-user btn-block" value="Procesar">
