--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Usuario/ActualizarPerfil.cshtml
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Usuario/ActualizarPerfil.cshtml
@@ -24,7 +24,7 @@
                         </div>
                     }
 
-                    @using (Html.BeginForm("ActualizarUsuario", "Usuario", FormMethod.Post))
+                    @using (Html.BeginForm("ActualizarPerfil", "Usuario", FormMethod.Post))
                     {
                         <div class="form-group">
                             @Html.Label("Identificación")
