--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/PantallaPrincipal.cshtml
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Inicio/PantallaPrincipal.cshtml
@@ -5,6 +5,7 @@
 }
 
 
+
 <div class="card-body">
     <div class="table-responsive">
         <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
@@ -22,17 +23,16 @@
 
                         @foreach (var item in Model)
                         {
-                            <div class="col-lg-4 col-md-8 col-sm-12" style="margin-bottom: 20px;">
+                            <div class="col-lg-4 col-md-6 col-sm-12" style="margin-bottom: 20px;">
                                 <div class="card">
                                     <div style="text-align: center;">
-                                        <img class="card-img-top" src="@item.RutaImagen" style="width: 175px; height: 175px; margin-top: 20px" />
+                                        <img class="card-img-top" src="@item.RutaImagen" style="width:175px; height:175px; margin-top:20px">
                                     </div>
-
                                     <div class="card-body">
-                                        <h5 class="card-title" style="font-weight: bold">@item.NombreProducto</h5>
+                                        <h5 class="card-title" style="font-weight:bold">@item.NombreProducto</h5>
 
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item">Categoria: @item.NombreCategoria</li>
+                                            <li class="list-group-item">Categoría: @item.NombreCategoria</li>
                                             <li class="list-group-item">Inventario: @item.Inventario</li>
                                             <li class="list-group-item">Precio: @item.Precio</li>
                                         </ul>
@@ -41,25 +41,79 @@
                                         {
                                             <div class="card-body">
                                                 <div class="row">
-                                                    <div class="col-2">
+                                                    <div class="col-6">
+                                                        <input type="number" id=prd-@item.Consecutivo onkeypress="return ValidarNumeros(this.id)" class="form-control" value="1" min="1" max="@item.Inventario" style="text-align:center">
                                                     </div>
                                                     <div class="col-4">
-                                                        <input type="number" class="form-control" value="1" min="1" max="5" style="text-align: center" />
-                                                    </div>
-                                                    <div class="col-4">
-                                                        <a href="#" class="card-link btn btn-outline-primary">Agregar</a>
+                                                        <a onclick="AgregarCarrito(@item.Consecutivo, @item.Inventario);" class="card-link btn btn-outline-primary">Agregar</a>
                                                     </div>
                                                 </div>
                                             </div>
                                         }
+
                                     </div>
                                 </div>
-
                             </div>
                         }
+
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+
+    function ValidarNumeros(evt) {
+        var charCode = (evt.which) ? evt.which : event.keyCode;
+        if (charCode >= 48 && charCode <= 57) {
+            return true;
+        }
+        return false;
+    }
+
+    function AgregarCarrito(id, inventario) {
+        let cantProducto = $("#prd-" + id).val();
+
+        if (cantProducto > inventario) {
+            MostrarAlert("info", "Debes ingresar una cantidad inferior");
+            return;
+        }
+
+        if (cantProducto <= 0) {
+            MostrarAlert("info", "Debe ingresar una cantidad válida");
+            return;
+        }
+
+        $.ajax({
+            url: '/Carrito/AgregarCarrito',
+            type: "POST",
+            data:
+            {
+                "idProducto": id,
+                "cantProducto": cantProducto
+            },
+            success: function (data) {
+                if (data == "OK") {
+                    window.location.href = '@Url.Action("PantallaPrincipal", "Inicio")';
+                }
+                else {
+                    alert(data);
+                }
+            }
+        });
+    }
+
+    function MostrarAlert(icono, mensaje) {
+        Swal.fire({
+            position: "center",
+            icon: icono,
+            title: mensaje,
+            showConfirmButton: false,
+            timer: 2500
+        });
+    }
+
+</script>
