--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Shared/_Layout.cshtml
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/Views/Shared/_Layout.cshtml
@@ -1,104 +1,97 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Sistema Web - Martes</title>
-    <script src="https://kit.fontawesome.com/9441ab567a.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/9441ab567a.js"></script>
     <link href="~/Estilos/css/sb-admin-2.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css" />
-
+    <link href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
 
-    <!-- Page Wrapper -->
     <div id="wrapper">
-
-        <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-            <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="@Url.Action("PantallaPrincipal", "Inicio")">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="@Url.Action("PantallaPrincipal","Inicio")">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Martes KN</div>
+                <div class="sidebar-brand-text mx-3">Sistema KN</div>
             </a>
 
-            <!-- Divider -->
             <hr class="sidebar-divider">
 
             @if (Session["RolUsuario"] != null && Session["RolUsuario"].ToString() == "1")
             {
-                <!-- Nav Item - Pages Collapse Menu -->
                 <li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo"
                        aria-expanded="true" aria-controls="collapseTwo">
                         <i class="fa fa-home"></i>
-                        <span>Mantenimiento</span>
+                        <span>Mantenimientos</span>
                     </a>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <a class="collapse-item" href="@Url.Action("ConsultarProductos", "Producto")">Productos</a>
-                            <a class="collapse-item" href="@Url.Action("ConsultarUsuarios", "Usuario")">Usuarios</a>
+                            <a class="collapse-item" href="@Url.Action("ConsultaProductos","Producto")">Productos</a>
+                            <a class="collapse-item" href="@Url.Action("ConsultaProductos","Producto")">Usuarios</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapse3"
+                       aria-expanded="true" aria-controls="collapse3">
+                        <i class="fa fa-bar-chart-o"></i>
+                        <span>Informes</span>
+                    </a>
+                    <div id="collapse3" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <a class="collapse-item" href="@Url.Action("ConsultaProductos","Producto")">Ventas</a>
                         </div>
                     </div>
                 </li>
             }
-
             else
             {
                 <li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo"
                        aria-expanded="true" aria-controls="collapseTwo">
                         <i class="fa fa-tags"></i>
                         <span>Compras</span>
                     </a>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Custom Components:</h6>
-                            <a class="collapse-item" href="#">Mi Carrito</a>
-                            <a class="collapse-item" href="#">Mis Compras</a>
+                            <a class="collapse-item" href="@Url.Action("ConsultarCarrito", "Carrito")">Mi Carrito</a>
+                            <a class="collapse-item" href="@Url.Action("ConsultarFacturas", "Carrito")">Mis Compras</a>
                         </div>
                     </div>
                 </li>
             }
 
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Sidebar Toggler (Sidebar) -->
-            <div class="text-center d-none d-md-inline">
-                <button class="rounded-circle border-0" id="sidebarToggle"></button>
-            </div>
-
         </ul>
-        <!-- End of Sidebar -->
-        <!-- Content Wrapper -->
+
         <div id="content-wrapper" class="d-flex flex-column">
 
-            <!-- Main Content -->
             <div id="content">
-
-                <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-                    <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <!-- Topbar Navbar -->
-                    <ul class="navbar-nav ml-auto">
+                    <div style="margin-left:2%; font-size:13pt">
+                        <i class="fa fa-tags"></i>    @Session["Cantidad"].ToString() &nbsp;&nbsp;&nbsp;&nbsp;
+                        <i class="fa fa-credit-card"></i> &nbsp; ¢ @decimal.Parse(Session["SubTotal"].ToString()).ToString("N2") + iva
+                    </div>
 
-                        <div class="topbar-divider d-none d-sm-block"></div>
+                    <ul class="navbar-nav ml-auto">
 
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link">
@@ -113,7 +106,6 @@
 
                         <div class="topbar-divider d-none d-sm-block"></div>
 
-                        <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -123,40 +115,32 @@
                                         @Session["NombreUsuario"].ToString();
                                     }
                                 </span>
-                                <img class="img-profile rounded-circle"
-                                     src="~/Estilos/img/undraw_profile.svg" />
                             </a>
-                            <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="@Url.Action("ActualizarUsuario", "Usuario")">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                <a class="dropdown-item" href="@Url.Action("ActualizarUsuario","Usuario")">
+                                    <i class="fa fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Perfil
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="@Url.Action("CerrarSesion", "Inicio")">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Cerrar Sesion
+                                    <i class="fa fa-sign-out fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Salir
                                 </a>
                             </div>
                         </li>
-
                     </ul>
 
                 </nav>
-                <!-- End of Topbar -->
-                <!-- Begin Page Content -->
+
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
                     @RenderBody()
 
                 </div>
-                <!-- /.container-fluid -->
 
             </div>
-            <!-- End of Main Content -->
-            <!-- Footer -->
+
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
@@ -164,14 +148,10 @@
                     </div>
                 </div>
             </footer>
-            <!-- End of Footer -->
 
         </div>
-        <!-- End of Content Wrapper -->
 
     </div>
-    <!-- End of Page Wrapper -->
-    <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
     </a>
@@ -197,11 +177,12 @@
     </div>
 
     <script src="~/Estilos/vendor/jquery/jquery.min.js"></script>
-    <script src="~/Estilos/vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="~/Estilos/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/Estilos/js/sb-admin-2.js"></script>
+    <script src="~/Estilos/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="~/Estilos/js/sb-admin-2.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.all.min.js"></script>
 
 </body>
 
